trying to fix serviceTest getGamesSuccess